<resources>
    <string name="app_name">가천대 공모전 알리미</string>
    <string name="tab_scrap">스크랩</string>
    <string name="tab_latest">최신순</string>
    <string name="tab_popular">인기순</string>
    <string name="tab_deadline">마감순</string>
    <string name="tab_job">취업</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="password_email_warning">이미 가입된 이메일입니다..</string>
    <string name="password_length_warning">비밀번호는 6자리 이상이어야합니다.</string>
    <string name="password_not_equal_warning">비밀번호가 일치하지 않습니다.</string>
    <string name="find_password">비밀번호를 잊어버리셨나요?</string>
    <string name="join_success">회원가입에 성공했습니다.</string>
    <string name="login_blank">이메일과 비밀번호를 입력해주세요</string>
    <string name="login_failed">로그인에 실패했습니다.</string>
    <string name="password_find">비밀번호 찾기</string>
    <string name="password_find_msg">회원가입 시 입력한 이메일로\n비밀번호 변경 메일을 보내드립니다.</string>
    <string name="email_wrong">해당 이메일로 가입한 정보가 없습니다</string>
    <string name="send">보내기</string>
    <string name="search_hint">검색어를 입력하세요</string>
    <string name="no_data">결과가 없습니다.</string>
    <string name="cannot_load_data">결과를 불러올 수 없습니다</string>
    <string name="no_scrap_data">아직 스크랩 내용이 없습니다!</string>
    <string name="scrap_success">스크랩에 추가했습니다</string>
    <string name="scrap_cancel_success">스크랩에서 제외했습니다</string>
    <string name="exit">종료하시겠습니까?</string>
    <string name="email_sent">이메일을 보냈습니다.\n비밀번호를 변경해주세요.</string>
    <string name="logout_success">로그아웃 되었습니다</string>
    <string name="delete_account_success">탈퇴가 완료되었습니다</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="account_info">계정</string>
    <string name="password_change">비밀번호 변경</string>
    <string name="logout">로그아웃</string>
    <string name="logout_sure">로그아웃하시겠습니까?</string>
    <string name="delete_account">회원 탈퇴</string>
    <string name="delete_account_sure">회원 탈퇴를 진행하시겠습니까?</string>
    <string name="app_info">앱 정보</string>
    <string name="version_title">버전</string>
    <string name="version_value">1.0.0</string>
    <string name="creator">개발팀</string>
    <string name="team_info">2021 Gachon Univ. team TMI</string>

</resources>