<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".SettingActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/account_info" />

    <LinearLayout
        android:id="@+id/account_info"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email" />

        <TextView
            android:id="@+id/user_email"
            android:layout_marginLeft="20dp"
            android:layout_weight="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="10dp"
        android:background="@color/light_light_gray" />

    <Button
        android:id="@+id/change_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:background="@color/transparent"
        android:gravity="left|center"
        android:drawableRight="@drawable/baseline_navigate_next_24"
        android:text="@string/password_change"

        android:textColor="@color/black" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:background="@color/transparent"
        android:gravity="left|center"
        android:drawableRight="@drawable/baseline_navigate_next_24"
        android:text="@string/logout"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:drawableRight="@drawable/baseline_navigate_next_24"
        android:backgroundTint="@color/white"
        android:background="@color/transparent"
        android:text="@string/delete_account"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_light_gray" />

    <TextView
        android:id="@+id/tv_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/app_info" />

    <LinearLayout
        android:id="@+id/app_info"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/version_title" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_marginLeft="20dp"
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/creator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/creator" />

            <TextView
                android:id="@+id/tv_creator"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/team_info"/>
        </LinearLayout>



    </LinearLayout>




</LinearLayout>